--- a/ReegeneratorCollection/RgenLib.csproj
+++ b/ReegeneratorCollection/RgenLib.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{FA884BB3-23D7-495C-A246-364FB3B2A478}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReegeneratorCollection</RootNamespace>
-    <AssemblyName>ReegeneratorCollection</AssemblyName>
+    <RootNamespace>RgenLib</RootNamespace>
+    <AssemblyName>RgenLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -56,6 +56,10 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
@@ -66,7 +70,6 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AttributeProcessor.cs" />
     <Compile Include="Extensions\Debug.cs" />
     <Compile Include="Extensions\ElementAtCursor.cs" />
     <Compile Include="Extensions\General.cs" />
@@ -82,16 +85,21 @@
     <Compile Include="Extensions\String.cs" />
     <Compile Include="Extensions\TextPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaggedSegment\FoundSegment.cs" />
+    <Compile Include="TaggedCodeRenderer.cs" />
+    <Compile Include="TaggedSegment\GeneratedSegment.cs" />
+    <Compile Include="TaggedSegment\OptionTag.cs" />
+    <Compile Include="TaggedSegment\Tag.cs" />
     <Compile Include="TaggedSegment\Manager.cs" />
     <Compile Include="TaggedSegment\TextRange.cs" />
+    <Compile Include="TaggedSegment\TriggerTypes.cs" />
     <Compile Include="TaggedSegment\Types.cs" />
     <Compile Include="TaggedSegment\Writer.cs" />
     <Compile Include="TaggedSegment\XmlWriter.cs" />
-    <Compile Include="XmlPropertyAttribute.cs" />
+    <Compile Include="XmlAttributeAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Kodeo.Reegenerator.dll" />
+    <None Include="packages.config" />
     <None Include="PropertyNameEnum.rgt">
       <Generator>RgenTemplate</Generator>
       <LastGenOutput>PropertyNameEnum.Designer.cs</LastGenOutput>
@@ -123,9 +131,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ReegeneratorCollecton.Attributes\ReegeneratorCollection.Attributes.csproj">
+    <ProjectReference Include="..\ReegeneratorCollecton.Attributes\RgenLib.Attributes.csproj">
       <Project>{07c4ae0f-b6a5-45fc-982c-e4ec2c0b6661}</Project>
-      <Name>ReegeneratorCollection.Attributes</Name>
+      <Name>RgenLib.Attributes</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
