--- a/ReegeneratorCollection.Test/RgenLib.Test.csproj
+++ b/ReegeneratorCollection.Test/RgenLib.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C551FD34-0538-4362-8CE2-2DFC0CC20E85}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReegeneratorCollection.Test</RootNamespace>
-    <AssemblyName>ReegeneratorCollection.Test</AssemblyName>
+    <RootNamespace>RgenLib.Test</RootNamespace>
+    <AssemblyName>RgenLib.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
