Added Json Writer

--- a/RgenLib/RgenLib.csproj
+++ b/RgenLib/RgenLib.csproj
@@ -79,12 +79,17 @@
     <Compile Include="Extensions\TextPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaggedCodeRenderer.cs" />
+    <Compile Include="TaggedSegment\CodeClassJsonConverter.cs" />
     <Compile Include="TaggedSegment\GeneratedSegment.cs" />
+    <Compile Include="TaggedSegment\Json\EnumConverter.cs" />
+    <Compile Include="TaggedSegment\Json\TagWrapper.cs" />
+    <Compile Include="TaggedSegment\Json\VersionConverter.cs" />
     <Compile Include="TaggedSegment\OptionTag.cs" />
-    <Compile Include="TaggedSegment\Settings.cs" />
+    <Compile Include="TaggedSegment\Constants.cs" />
     <Compile Include="TaggedSegment\Tag.cs" />
     <Compile Include="TaggedSegment\Manager.cs" />
     <Compile Include="TaggedSegment\TextRange.cs" />
+    <Compile Include="TaggedSegment\TriggerInfo.cs" />
     <Compile Include="TaggedSegment\TriggerTypes.cs" />
     <Compile Include="TaggedSegment\Types.cs" />
     <Compile Include="TaggedSegment\Writer.cs" />
