--- a/RgenLib.Templates/RgenLib.Templates.csproj
+++ b/RgenLib.Templates/RgenLib.Templates.csproj
@@ -57,6 +57,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Data" />
@@ -65,6 +66,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DbSet.rgt</DependentUpon>
+    </Compile>
+    <Compile Include="DbSet.rgt.cs">
+      <DependentUpon>DbSet.rgt</DependentUpon>
+    </Compile>
+    <Compile Include="DbSetDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DbSetDialog.Designer.cs">
+      <DependentUpon>DbSetDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyNameEnum.Designer.cs">
       <DependentUpon>PropertyNameEnum.rgt</DependentUpon>
@@ -75,6 +89,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="DbSet.rgt">
+      <Generator>RgenTemplate</Generator>
+      <LastGenOutput>DbSet.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Kodeo.Reegenerator.dll" />
     <None Include="PropertyNameEnum.rgt">
       <Generator>RgenTemplate</Generator>
@@ -115,6 +133,11 @@
       <Project>{fa884bb3-23d7-495c-a246-364fb3b2a478}</Project>
       <Name>RgenLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DbSetDialog.resx">
+      <DependentUpon>DbSetDialog.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
